--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/yuvaltar/Gmailish-tsk3#readme",
   "dependencies": {
+    "async-mutex": "^0.5.0",
     "express": "^5.1.0"
   }
 }
