--- a/Dockerfile.server
+++ b/Dockerfile.server
@@ -8,16 +8,13 @@ RUN apt-get update && apt-get install -y \
     libgtest-dev \
  && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# OPTIONAL — if your tests use raw gtest directly
 RUN cd /usr/src/gtest && cmake . && make && cp lib/libgtest*.a /usr/lib || true
 
-# Fix for build failure: clone googletest
 RUN git clone https://github.com/google/googletest.git third_party/googletest
 
 WORKDIR /app
-
 COPY . .
 
 RUN make clean && make
 
-ENTRYPOINT ["./server"]
+CMD ["./server"]  # Let Docker Compose override this
