--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 services:
+
   user:
     build:
       context: .
@@ -23,4 +24,5 @@ services:
       dockerfile: Dockerfile.server
     ports:
       - "4000:4000"
+    command: ["./server", "4000", "1024", "3", "5"]
     restart: unless-stopped
