--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: "3.9"
+
 services:
 
   user:
@@ -5,10 +7,14 @@ services:
       context: .
       dockerfile: Dockerfile.user
     ports:
-      - "3000:3000"
+      - "3000:3000"  # default
     volumes:
       - .:/usr/src/app
+    environment:
+      - CPP_PORT=4000
+      - PORT=3000
     restart: unless-stopped
+    command: sh -c "npm install && npm run dev"
 
   web:
     build:
