--- a/react_server/package.json
+++ b/react_server/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.6",
     "cors": "^2.8.5",
     "react": "^19.1.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
