--- a/react_server/package.json
+++ b/react_server/package.json
@@ -12,6 +12,7 @@
     "express": "^5.1.0",
     "react": "^19.1.0",
     "react-bootstrap": "^2.10.10",
+    "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
