--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "async-mutex": "^0.5.0",
     "body-parser": "^2.2.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
